fix footer alignments and margins + titles active

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -112,6 +112,10 @@
         width: calc(100% - 50px);
     }
 
+    main .upgrade {
+        width: calc(100% - 50px);
+    }
+
     /* sezione musica  */
 
     main section .album {
